Fix Serializer & OnDisconnect
- Fixed the serializer and deserializer.

- Fixed a bug in Client::MessageReceiver where the OnDisconnect event would raise twice when a WebSocket exception gets thrown

- Bump versions

--- a/EEUniverse.Library.Tests/EEUniverse.Library.Tests.csproj
+++ b/EEUniverse.Library.Tests/EEUniverse.Library.Tests.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EEUniverse.LoginExtensions" Version="0.*.*" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EEUniverse.Library\EEUniverse.Library.csproj" />
   </ItemGroup>
 
