--- a/EEUniverse.Library/EEUniverse.Library.csproj
+++ b/EEUniverse.Library/EEUniverse.Library.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -10,9 +10,9 @@
     <PackageProjectUrl>https://github.com/EEUniverse/Library</PackageProjectUrl>
     <RepositoryUrl>https://github.com/EEUniverse/Library</RepositoryUrl>
     <PackageTags>bot</PackageTags>
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
-    <FileVersion>1.0.1.0</FileVersion>
-    <Version>1.0.1</Version>
+    <AssemblyVersion>1.0.2.0</AssemblyVersion>
+    <FileVersion>1.0.2.0</FileVersion>
+    <Version>1.0.2</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <SignAssembly>false</SignAssembly>
     <PackageId>EEUniverse.Library</PackageId>
